services/services.yaml
# kubectl get services (svc)
# if there multiple nodes, k8s spans the service on all the nodes
apiVersion: v1
kind: Service
metadata:
  name : my-service
spec:
   type: NodePort
   ports:
   - targetPort: 80 #This is the actual port on which your application is running inside the container.
     protocol: TCP 
     port: 80  # Port on the service
     nodePort: 30002  # Port on the node
   selector:
      app: front-end1
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ClusterIP
  ports:
     port: 80
     targetPort: 80
